# DERd

./: .gitignore  Test data.sql  app.js  desmos graph tests.txt  package-lock.json  package.json  readme.md
Backend/: app.js  package-lock.json  package.json
Backend-Rust/: Cargo.toml
Backend-Rust/src/: lib.rs  main.rs
Backend/app/controllers/: indexController.js
Backend/app/views/: head.ejs  index.ejs  things.ejs
Backend/public/js/: createSvgComponents.js  diagramEditor.js  drawingExecution.js  drawingFunctions.js  graph.js  helperFunctions.js  inputs.js
Backend/src/: main.rs
BackendRust/: Cargo.toml
BackendRust/src/lib/: mod.rs
BackendRust/src/lib/routes/: hello_world.rs  index.rs  mirror_body_json.rs  mod.rs  parse_sql.rs
BackendRust/src/lib/routes/parse_sql/: build_database_object.rs
Frontend/: index.html  package-lock.json
Frontend/src/: App.svelte  stores.js
Frontend/src/components/: BasketComponent.svelte  ImageComponent.svelte  UploaderComponent.svelte
Frontend/src/lib/: Diagram.svelte  Input.svelte  RenderButton.svelte
Frontend/src/utils/: createGraph.js  diagramEditor.js  drawingFunctions.js  graph.js  helperFunctions.js  optimize.js  svgComponents.js  xmlComponents.js
app/controllers/: indexController.js  thingsController.js
app/models/: db.js  thingsModel.js
app/routes/: index.js  thingsRoutes.js
app/views/: footer.ejs  head.ejs  header.ejs  index.ejs
public/js/: crappyParsing.js  createSvgComponents.js  desmos graph tests.txt  drawingExecution.js  drawingFunctions.js  graph.js  inputs.js  sqlParser.js
(+1 files in other folders)
