[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.193", features = ["derive"] }
sqlparser = "0.39.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
